# rektoff_hands-on

./: .gitmodules  README.md
bugs-slowmist/: Anchor.toml  package-lock.json  package.json
bugs-slowmist/programs/bugs-slowmist/: Cargo.toml
bugs-slowmist/programs/bugs-slowmist/src/: lib.rs
bugs-slowmist/tests/: bugs-slowmist.ts
bugs_examples/: package-lock.json  package.json
bugs_examples/account_1/: package-lock.json  package.json  tsconfig.json
bugs_examples/account_1/programs/account_1/: Cargo.toml
bugs_examples/account_1/tests/: test_by_me.ts
bugs_examples/account_1_fixed/programs/account_1/: Cargo.toml
bugs_examples/account_2_fixed/programs/account_2/: Cargo.toml
bugs_examples/account_3_fixed/programs/account_3/: Cargo.toml
bugs_examples/account_4/: package-lock.json  package.json
bugs_examples/account_4/programs/account_4/src/: lib.rs
bugs_examples/account_4/tests/: account_4.ts
bugs_examples/account_4_fixed/: package-lock.json  package.json
bugs_examples/account_4_fixed/programs/account_4/: Cargo.toml
svm_overview/: Cargo.toml  README.md  functions.md
svm_overview/client/: Cargo.toml
svm_overview/client/src/: main.rs
svm_overview/program/: Cargo.toml
svm_overview/program/src/: lib.rs
