[package]
name = "solana_logger_client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
solana-client = "2.2"
solana-sdk = "2.2"
solana-transaction-status = "2.3"
anyhow = "1.0"
