[package]
name = "solana_logger_program"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
solana-program = "2.2"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
